--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<win.whitelife.swipefinishdemo.SwipeFinishLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<library.whitelife.swipefinish.SwipeFinishLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,4 +13,4 @@
         android:background="#444"/>
 
 
-</win.whitelife.swipefinishdemo.SwipeFinishLayout>
+</library.whitelife.swipefinish.SwipeFinishLayout>
