添加自定义属性，添加不同的滑动方向，完善相关属性

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<library.whitelife.swipefinish.SwipeFinishLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.orange.library.SwipeFinishLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:swipe="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#457"
-    >
+    swipe:is_full_screen="true"
+    swipe:max_scroll_time="300"
+    swipe:scroll_mode="BOTTOM"
+   >
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="match_parent"
         android:text="Hello World!"
         android:background="#444"/>
 
 
-</library.whitelife.swipefinish.SwipeFinishLayout>
+</com.orange.library.SwipeFinishLayout>
